WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98584
Fix weird use of KURL's protocolIs
https://bugs.webkit.org/show_bug.cgi?id=98584
Summary
Fix weird use of KURL's protocolIs
Benjamin Poulain
Reported
2012-10-05 23:18:25 PDT
Implicit conversion to string is bad.
Attachments
Patch
(3.36 KB, patch)
2012-10-05 23:30 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-10-05 23:30:48 PDT
Created
attachment 167441
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-06 11:44:08 PDT
Comment on
attachment 167441
[details]
Patch Clearing flags on attachment: 167441 Committed
r130586
: <
http://trac.webkit.org/changeset/130586
>
WebKit Review Bot
Comment 3
2012-10-06 11:44:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug