Fix weird use of KURL's protocolIs https://bugs.webkit.org/show_bug.cgi?id=98584

Reviewed by Adam Barth.

Converting a KURL to string is a bad idea.

Invalid URLs can return a string that pass the tests, while an
invalid URL will fail protocolIs().

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::removeClient):
* platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::load):
* platform/network/DataURL.cpp:
(WebCore::handleDataURL):


Canonical link: https://commits.webkit.org/116576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130586 268f45cc-cd09-0410-ab3c-d52691b4dbfc